[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://images/Stat bar/lives_v3.png" type="Texture" id=2]
[ext_resource path="res://images/Stat bar/lives_v4.png" type="Texture" id=3]
[ext_resource path="res://images/Stat bar/life_bg.png" type="Texture" id=4]
[ext_resource path="res://images/Stat bar/full_bar.png" type="Texture" id=5]

[node name="HUD" type="CanvasLayer"]
offset = Vector2( -40, 40 )
transform = Transform2D( 1, 0, 0, 1, -40, 40 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -33.0
margin_top = -18.0
margin_right = 1847.0
margin_bottom = 730.0
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
margin_left = -33.0
margin_top = -18.0
margin_right = 1847.0
margin_bottom = 730.0
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 3 )

[node name="VContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 40.0
margin_right = 1989.0
margin_bottom = 785.0

[node name="HealthBar" type="TextureProgress" parent="VContainer"]
margin_right = 1889.0
margin_bottom = 33.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="VContainer2" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 70.0
margin_right = 1900.0
margin_bottom = 768.0

[node name="ManaBar" type="TextureProgress" parent="VContainer2"]
margin_right = 1800.0
margin_bottom = 33.0
max_value = 12.0
value = 5.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

